reduce guava usage in IterableSubject